# hpc-diy

./: README.md
.github/workflows/: ci_cluster_control.yml  cluster_status.yml  stale.yml  validate_user_definitions.yml
ansible/: README.md
ansible/config/: slurm.conf
ansible/inventories/: inventory.ini
ansible/playbooks/: chrony.yml  cluster_control.yaml  cluster_control.yml  dnsmasq.yml  generate_munge_key.yml  install_slurm_deb_nodes.yml  munge.yml  openmpi.yml  shared_storage.yml  slurm.yml  slurm_deb_build_ubuntu18.yml  slurm_local_ubuntu24.yml  slurm_nodes_ubuntu18.yml  slurm_startup.yml  sync_users.yml  users.yml
ansible/roles/users/tasks/: main.yml
ansible/users/: slayoo.yml
cluster-control/: .gitignore  Makefile  README.md  pyproject.toml  start.sh
cluster-control/cluster_control/: main.py
cluster-control/cluster_control/checks/: check.py  node_connectivity_check.py  sufficient_power_check.py
cluster-control/cluster_control/utils/: config.py  network.py  paths.py
cluster-control/tests/unit/: test_main.py  test_network.py
users/: azaba.yml
